# JobFlowPlatform

./: Makefile  README.md  project_definition.txt
backend/: database.db  pyproject.toml
backend/app/: main.py
backend/app/api/: companies.py  company_routes.py  person_routes.py  persons.py  post_routes.py  posts.py
backend/app/core/: config.py  enum.py  logger.py
backend/app/db/: dependencies.py  session.py
backend/app/models/: company.py  person.py  post.py
backend/app/repositories/: company_repository.py  person_repository.py  post_repository.py
backend/app/schemas/: company.py  persons.py  posts.py
backend/app/services/: company_service.py  person_service.py  post_service.py
docs/: Day2.md
scripts/: dev.sh
