[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "amir ap",email = "arabpour.amir@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.44.0,<0.45.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
